# bourse

./: .gitignore  CMakeLists.txt  PLAN.md  README.md  compose.yml
cxx/: CMakeLists.txt
cxx/engine/: CMakeLists.txt
cxx/engine/include/engine/: matching_engine.hpp  order_book.hpp  types.hpp
cxx/engine/src/: matching_engine.cpp  order_book.cpp
cxx/engine/tests/: CMakeLists.txt  kafka_engine_test.cpp  kafka_integration_test.cpp  matching_engine_test.cpp  order_book_test.cpp
cxx/engine/tools/: CMakeLists.txt  order_generator.cpp  order_generator.hpp
cxx/engine/tools/kafka_engine/: CMakeLists.txt  consumer.cpp  consumer.hpp  main.cpp  producer.cpp  producer.hpp  publish_test_order.cpp
cxx/engine/tools/kafka_engine/schema/: book_update.fbs  order.fbs  trade_event.fbs
cxx/util/: CMakeLists.txt  linked_list.hpp  linked_list_test.cpp
docs/: benchmark.md  stage-2.md  stage-4.md
go/: Makefile  go.mod  go.sum
go/cmd/gateway/: main.go
go/internal/gate/: dedup.go  gate_test.go  rate.go
go/internal/kafka/: producer.go
go/internal/order/: order.go  order_test.go
go/internal/schema/: Order.go  order.fbs
go/internal/ws/: handler.go
go/tests/: integration_test.go
rs/: Cargo.toml  Makefile
rs/src/: book.rs  kafka.rs  main.rs  ws.rs
rs/src/schema/: book_update.fbs  book_update_generated.rs  mod.rs  trade_event.fbs  trade_event_generated.rs
scripts/: plot_book.py  run_generator.sh
