[package]
name = "market-data"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.29"
futures-util = "0.3"
rdkafka = { version = "0.39", features = ["cmake-build"] }
flatbuffers = "25.12.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
